# meilisense

./: Cargo.toml
src/: lib.rs  main.rs  typesense.rs
src/meili/: dump.rs  import.rs  mod.rs
