[package]
name = "meilisense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt"] }
clap = { version = "4.0.18", features = ["derive"] }
dump = { git = "https://github.com/meilisearch/meilisearch.git", default-features = false }
meilisearch-sdk = "0.20.1"
meilisearch-types = { git = "https://github.com/meilisearch/meilisearch.git", default-features = false }
rocksdb = "0.18.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
time = { version = "0.3.16", features = ["serde"] }
